--- a/index.html
+++ b/index.html
@@ -5,175 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Annual Conference</title>
     <link rel="stylesheet" href="css/style.css">
-    <!--<style>
-        @font-face {
-            font-family: 'kolak';
-            src: url(fonts/kolak/KOLAK.ttf) format('truetype');
-        }
-        @font-face {
-            font-family: 'extradicta';
-            src: url(fonts/extradicta/Extradicta.ttf) format('truetype');
-        }
-        @font-face {
-            font-family: 'evelins';
-            src: url(fonts/evelins/EvelinsRegular.ttf) format('truetype');
-        }
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            background-color: #ffffff;
-            font-family: 'extradicta';
-            overflow-y: scroll; /* Hide scrollbars */
-            scrollbar-width: none;
-            scroll-behavior: smooth;
-        }
-        .hero {
-            background: url('DP.png') no-repeat center center/cover;
-            color: white;
-            text-align: center;
-            padding: 10rem;
-            margin: 1rem;
-            border-radius: 0.5rem;
-        }
-        .hero h1 {
-            font-size: 3em;
-            margin: 0;
-        }
-        .hero p {
-            font-size: 1.5em;
-            margin: 0;
-        }
-        .section {
-            padding: 50px 20px;
-            text-align: center;
-            background-color: #fafafa;
-            font-family: 'Times New Roman', Times, serif;
-        }
-        #about{
-            text-align: center;
-            font-size: 1.5rem;
-            background-color: #f1e9e6;
-            margin: 0;
-            font-family: 'Times New Roman', Times, serif;
-        }
-        #about h2{
-            color: #e98c00;
-            font-size: 3rem;
-            margin-top: -1rem;
-            font-family: 'kolak';
-        }
-        #h2{
-            color: #e98c00;
-            text-align: center;
-            font-size: 2rem;
-            margin-top: -1rem;
-            font-family: 'kolak';
-        }
-        .ministers {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            gap: 20px;
-        }
-        .minister {
-            flex: 1 1 15%;
-            min-width: 200px;
-            margin: 10px;
-            text-align: center;
-            font-family: 'evelins';
-            margin-top: -2rem;
-        }
-        .minister p{
-            font-family: serif;
-        }
-        .minister img {
-            width: 10rem;
-            height: 10rem;
-            border-radius: 50%;
-            /*object-fit: cover;*/
-        }
-        .minister h3 {
-            margin: 10px 0 5px;
-        }
-        .minister p {
-            font-size: 0.9em;
-        }
-        #registration {
-            max-width: 400px;
-            margin: 0 auto;
-            background-color: #38271e;
-            color: #ffffff;
-            padding: 15px;
-            border-radius: 1rem;
-            margin-top: 1rem;
-        }
-        .form-group {
-            margin: 15px 0;
-            text-align: left;
-        }
-        .form-group label {
-            display: block;
-            margin-bottom: 5px;
-        }
-        .form-group input, .form-group select {
-            width: 100%;
-            padding: 10px;
-            margin-bottom: 10px;
-            box-sizing: border-box;
-        }
-        button {
-            padding: 1rem 2rem;
-            background-color: #333;
-            color: white;
-            border: none;
-            cursor: pointer;
-            font-size: 1rem;
-            border-radius: 1rem;
-        }
-        .footer {
-            background: #333;
-            color: white;
-            padding: 20px 0;
-            text-align: center;
-            text-align: center;
-            margin-top: 2rem;
-        }
+    <script>
+        function handleFormSubmit(event) {
+            event.preventDefault(); // Prevent default form submission
+            const form = event.target;
+            const formData = new FormData(form);
 
-        @media (max-width: 768px) {
-            .hero h1 {
-                font-size: 2em;
-            }
-            .hero p {
-                font-size: 1.2em;
-            }
-            .ministers {
-                flex-direction: column;
-            }
-            .minister {
-                width: 100%;
-            }
+            fetch(form.action, {
+                method: form.method,
+                body: formData,
+                headers: {
+                    'Accept': 'application/json'
+                }
+            })
+            .then(response => {
+                if (response.ok) {
+                    window.location.href = 'https://getdp.co/emergeconference24'; // Redirect to thank you page
+                } else {
+                    alert('Something went wrong. Please try again.');
+                }
+            })
+            .catch(error => {
+                console.error('Error:', error);
+                alert('There was an error submitting the form. Please try again.');
+            });
         }
-        @media (max-width: 480px) {
-            .hero {
-                padding: 50px 20px;
-            }
-            .hero h1 {
-                font-size: 1.5em;
-            }
-            .hero p {
-                font-size: 1em;
-            }
-            .minister img {
-                width: 80px;
-                height: 80px;
-            }
-            #registration {
-                width: 90%;
-            }
-        }
-    </style>-->
+    </script>
 </head>
 <body>
 
